--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "set NODE_ENV=development && tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "build:render": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build:render": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && cpy .env dist/",
     "start": "NODE_ENV=production node dist/index.js",
     "start:win": "set NODE_ENV=production && node dist/index.js",
     "check": "tsc",
