--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: npm install --legacy-peer-deps
-    startCommand: node server/render-server.js
+    startCommand: node server/render-server.cjs
     envVars:
       - key: NODE_ENV
         value: production
