Reforma Area PRO

--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,8 @@
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.3",
     "input-otp": "^1.2.4",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.331.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
