--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "set NODE_ENV=development && tsx server/index.ts",
+    "dev": "set PORT=8080&& set NODE_ENV=development&& tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:render": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && cpy .env dist/",
     "start": "NODE_ENV=production node dist/index.js",
