--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
     "@tanstack/react-query": "^5.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
