--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.18.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.8.0",
     "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
@@ -45,6 +46,7 @@
     "postgres": "^3.4.7",
     "redis": "^5.6.0",
     "socket.io": "^4.8.1",
+    "stripe": "^18.5.0",
     "ws": "^8.18.3",
     "zod": "^3.25.67"
   }
